[tool.poetry]
name = "simulatte"
version = "0.1.2"
description = ""
authors = ["Davide Mezzogori <dmezzogori@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simpy = "^4.0.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
black = "^23.3.0"
jupyterlab = "^4.0.2"
coverage-badge = "^1.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
